--- a/brickGame/brickGame.vcxproj
+++ b/brickGame/brickGame.vcxproj
@@ -176,6 +176,13 @@
     <ClInclude Include="FTexture.h" />
     <ClInclude Include="stbi_image.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="sprite.vert" />
+    <None Include="sprte.frag" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="awesomeface.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
