update game level

--- a/brickGame/brickGame.vcxproj.filters
+++ b/brickGame/brickGame.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="FGameObject.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="FGameLevel.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FGame.h">
@@ -69,6 +72,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="FGameObject.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FGameLevel.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
