--- a/brickGame/brickGame.vcxproj
+++ b/brickGame/brickGame.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="..\..\..\..\lib\glad\src\glad.c" />
     <ClCompile Include="brickGame.cpp" />
     <ClCompile Include="FGame.cpp" />
+    <ClCompile Include="FGameLevel.cpp" />
     <ClCompile Include="FGameObject.cpp" />
     <ClCompile Include="FResourceManager.cpp" />
     <ClCompile Include="FShader.cpp" />
@@ -171,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FGame.h" />
+    <ClInclude Include="FGameLevel.h" />
     <ClInclude Include="FGameObject.h" />
     <ClInclude Include="FResourceManager.h" />
     <ClInclude Include="FShader.h" />
