--- a/brickGame/brickGame.vcxproj
+++ b/brickGame/brickGame.vcxproj
@@ -188,6 +188,7 @@
     <Image Include="awesomeface.png" />
     <Image Include="block.png" />
     <Image Include="block_solid.png" />
+    <Image Include="paddle.png" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="LevelFour.txt" />
