--- a/brickGame/brickGame.vcxproj.filters
+++ b/brickGame/brickGame.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="FBallObject.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="FParticle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FGame.h">
@@ -84,6 +87,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="FBallObject.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FParticle.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
