--- a/brickGame/brickGame.vcxproj
+++ b/brickGame/brickGame.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="FGameLevel.cpp" />
     <ClCompile Include="FGameObject.cpp" />
     <ClCompile Include="FParticle.cpp" />
+    <ClCompile Include="FPostProcesser.cpp" />
     <ClCompile Include="FResourceManager.cpp" />
     <ClCompile Include="FShader.cpp" />
     <ClCompile Include="FSprite.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="FGameLevel.h" />
     <ClInclude Include="FGameObject.h" />
     <ClInclude Include="FParticle.h" />
+    <ClInclude Include="FPostProcesser.h" />
     <ClInclude Include="FResourceManager.h" />
     <ClInclude Include="FShader.h" />
     <ClInclude Include="FSprite.h" />
