--- a/brickGame/brickGame.vcxproj
+++ b/brickGame/brickGame.vcxproj
@@ -75,16 +75,16 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\lib\freetype-windows-binaries-master\include;D:\lib\assimp-5.0.1\build\include;D:\lib\assimp-5.0.1\include;D:\lib\glm;D:\lib\glad\include;D:\lib\glfw-3.3.2.bin.WIN64\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\lib\freetype-windows-binaries-master\release dll\win64;D:\lib\assimp-5.0.1\build\code\Release;D:\lib\glfw-3.3.2.bin.WIN64\lib-vc2017;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\lib\irrKlang-64bit-1.6.0\include;D:\lib\freetype-windows-binaries-master\include;D:\lib\assimp-5.0.1\build\include;D:\lib\assimp-5.0.1\include;D:\lib\glm;D:\lib\glad\include;D:\lib\glfw-3.3.2.bin.WIN64\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\lib\irrKlang-64bit-1.6.0\lib\Winx64-visualStudio;D:\lib\freetype-windows-binaries-master\release dll\win64;D:\lib\assimp-5.0.1\build\code\Release;D:\lib\glfw-3.3.2.bin.WIN64\lib-vc2017;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\lib\freetype-windows-binaries-master\include;D:\lib\assimp-5.0.1\build\include;D:\lib\assimp-5.0.1\include;D:\lib\glm;D:\lib\glad\include;D:\lib\glfw-3.3.2.bin.WIN64\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\lib\freetype-windows-binaries-master\release dll\win64;D:\lib\assimp-5.0.1\build\code\Release;D:\lib\glfw-3.3.2.bin.WIN64\lib-vc2017;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\lib\irrKlang-64bit-1.6.0\include;D:\lib\freetype-windows-binaries-master\include;D:\lib\assimp-5.0.1\build\include;D:\lib\assimp-5.0.1\include;D:\lib\glm;D:\lib\glad\include;D:\lib\glfw-3.3.2.bin.WIN64\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\lib\irrKlang-64bit-1.6.0\lib\Winx64-visualStudio;D:\lib\freetype-windows-binaries-master\release dll\win64;D:\lib\assimp-5.0.1\build\code\Release;D:\lib\glfw-3.3.2.bin.WIN64\lib-vc2017;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -116,7 +116,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>freetype.lib;glfw3.lib;assimp-vc141-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>irrKlang.lib;freetype.lib;glfw3.lib;assimp-vc141-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -156,7 +156,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>freetype.lib;glfw3.lib;assimp-vc141-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>irrKlang.lib;freetype.lib;glfw3.lib;assimp-vc141-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -215,6 +215,9 @@
     <Text Include="LevelOne.txt" />
     <Text Include="LevelThree.txt" />
     <Text Include="LevelTwo.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="breakout.mp3" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
